Bug 256689 - cannot select Kolab resource in the create todo/event dialog
Summary: cannot select Kolab resource in the create todo/event dialog
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-12 12:50 UTC by Ludwig Reiter
Modified: 2010-12-13 11:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-11-12 12:50:24 UTC
version: 20101112 / svn 1195843

test:
start to create a new event or to-do.
click on Personal Calendar.
=> Nothing happens
I would expect that a choose resource dialogs opens.
Comment 1 Sergio Martins 2010-11-16 10:21:02 UTC
The combo has many items, but it just doesn't popup.
Comment 2 Sergio Martins 2010-11-16 18:22:04 UTC
SVN commit 1197831 by smartins:

Workaround for bug 256689 (wince only).
The combo popup was cut off.
Fixes the category selector in the contact and incidence editors.
We still need a better solution, other combos have the same problem.

BUG: 256689

 M  +18 -0     collectioncombobox.cpp  
 M  +5 -0      collectioncombobox.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1197831
Comment 3 Ludwig Reiter 2010-12-13 11:45:33 UTC
version: WindowsCE kontact mobile 4.6. beta2 svn-1204839

I can select the Kolab resource folder in this version.

Closed.