Workaround for bug 256689 (wince only). The combo popup was cut off. Fixes the category selector in the contact and incidence editors. We still need a better solution, other combos have the same problem.

BUG: 256689

svn path=/trunk/KDE/kdepimlibs/; revision=1197831